# OV-Watch

lv_sim_vscode/: CMakeLists.txt  vscode.code-workspace
lv_sim_vscode/lvgl/demos/benchmark/: lv_demo_benchmark.c
lv_sim_vscode/user_test/: CMakeLists.txt  ui.c
lv_sim_vscode/user_test/Func/: PageStack.c  PageStack.h  StrCalculate.c
lv_sim_vscode/user_test/Screens/Src/: ui_Game2048Page.c  ui_HomePage.c  ui_OffTimePage.c  ui_SPO2Page.c  ui_SetPage.c  ui_TimerPage.c
lv_sim_vscode_mac/: CMakeLists.txt  Makefile  vscode.code-workspace
lv_sim_vscode_mac/user_test/Func/: PageStack.c
lv_sim_vscode_mac/user_test/Screens/Src/: ui_TimerPage.c
